# TwinRehabAlgorithm

./: CMakeLists.txt  README.md  myproject.toml  requirements.txt  setup.py
bindings/: CMakeListd.txt
bindings/src/: bind_kinematics.cpp  bind_model.cpp  bind_optimizer.cpp
bindings/tests/: test_bindings.py
cpp/: CMakeLists.txt
cpp/include/biomech/: kinematics_solver.hpp  motion_analyzer.hpp  rehab_optmizer.hpp  types.hpp
cpp/src/analysis/: kinematics_solver.cpp  motion_analyzer.cpp
cpp/src/core/: joint_model.cpp  musculoskeletal_model.cpp
cpp/src/optimization/: rehab_optimizer.cpp
cpp/tests/: CMakeList.txt  test_kinematics.cpp  test_optimization.cpp
data/sample_motion/: sample_motion_1.json
data/test_cases/: test_case_1.json
docs/: api
docs/cpp/: Doxyfile
docs/python/: conf.py
python/digital_twin/analysis/: motion_processor.py
python/digital_twin/core/: data_types.py  model_interface.py
python/digital_twin/data_management/: patient_database.py
python/digital_twin/optimization/: movement_optimizer.py
python/digital_twin/visualization/: realtime_visualizer.py
python/tests/: test_model_interface.py  test_motion_processor.py
scripts/: build.sh  install_dependencies.sh  run_tests.sh
